# docs/swagger.json
@@ -629,7 +629,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Super Admin"
+                    "SuperAdmin"
                 ],
                 "summary": "Ubah status admin apotek (Suspend / Activate)",
                 "parameters": [
@@ -646,10 +646,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/dto.ChangeAdminStatusRequest"
                         }
                     }
                 ],
@@ -841,8 +838,10 @@
                     "type": "string"
                 },
                 "deskripsi": {
-                    "description": "Field Baru",
                     "type": "string"
+                },
+                "distance": {
+                    "type": "number"
                 },
                 "id": {
                     "type": "string"
@@ -863,14 +862,13 @@
                     "type": "string"
                 },
                 "phone_number": {
-                    "description": "Field Baru",
+                    "description": "UBAH 3 FIELD INI JADI POINTER (*string) AGAR BISA MENERIMA NULL DARI DATABASE",
                     "type": "string"
                 },
                 "rejection_reason": {
                     "type": "string"
                 },
                 "verification_status": {
-                    "description": "APPROVED / REJECTED",
                     "type": "string"
                 }
             }
@@ -891,18 +889,20 @@
         },
         "dto.AdminRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
             "properties": {
                 "email": {
-                    "type": "string",
-                    "example": "admin@apotek.com"
+                    "type": "string"
                 },
-                "nama": {
-                    "type": "string",
-                    "example": "Admin Apotek"
+                "name": {
+                    "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "example": "password123"
+                    "type": "string"
                 }
             }
         },
@@ -923,6 +923,18 @@
                 "token": {
                     "type": "string",
                     "example": "jwt_token_here"
+                }
+            }
+        },
+        "dto.ChangeAdminStatusRequest": {
+            "type": "object",
+            "required": [
+                "status"
+            ],
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "example": "suspended"
                 }
             }
         },
@@ -1129,7 +1141,6 @@
             ],
             "properties": {
                 "action": {
-                    "description": "approved atau rejected",
                     "type": "string",
                     "example": "approved"
                 },
@@ -1139,7 +1150,7 @@
                 },
                 "notes": {
                     "type": "string",
-                    "example": "Dokumen apotek valid dan lengkap"
+                    "example": "Dokumen lengkap dan valid"
                 }
             }
         }
